--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -1,4 +1,4 @@
-backgroud-color
+body
 {
     color: #343434;
 }
@@ -7,13 +7,22 @@ img
     height: 100px;
     width: 100px;
     margin-left: 50%;
-
-
 }
+
 header
 {
     color: #ffc045;
     height: 100xp;
     width: 100%;
     display: inline-block;
+}
+
+.menu {
+    text-align: center;
+}
+
+.menu li
+{
+     display: inline-block;
+    list-style-type: none;
 }
